Corrected API URL

--- a/index.html
+++ b/index.html
@@ -6200,7 +6200,7 @@ async function loadQuarterlyReportData() {
     // API Configuration - UPDATE THIS with actual API endpoint from Ticket 1
     const FEDRAMP_API_CONFIG = {
         // Base URL from AWS CloudFormation output 
-        BASE_URL: 'https://7d7pdwb9t3.execute-api.us-east-1.amazonaws.com/prod/register',
+        BASE_URL: 'https://7d7pdwb9t3.execute-api.us-east-1.amazonaws.com/prod',
         
         // API endpoints
         ENDPOINTS: {
