--- a/index.html
+++ b/index.html
@@ -7614,25 +7614,26 @@ async function loadQuarterlyReportData() {
     }
 
     function showWhyTwoTier(ksiId) {
-        if (!window.fedRAMPAuth.isAuthenticated) {
-            // Unauthenticated - show access required modal
-            showAccessRequiredModal('Technical Assessment Details', [
-                'View complete technical findings and root cause analysis',
-                'Access detailed CLI command execution logs',
-                'Review specific remediation plans and timelines',
-                'Download evidence packages for compliance',
-                'Integrate with your agency\'s GRC tools'
-            ]);
+    if (!window.fedRAMPAuth.isAuthenticated) {
+        // Unauthenticated - show access required modal
+        showAccessRequiredModal('Technical Assessment Details', [
+            'View complete technical findings and root cause analysis',
+            'Access detailed CLI command execution logs',
+            'Review specific remediation plans and timelines',
+            'Download evidence packages for compliance',
+            'Integrate with your agency\'s GRC tools'
+        ]);
+    } else {
+        // Authenticated - call the ORIGINAL showWhyModal function
+        if (typeof window.originalShowWhyModal === 'function') {
+            window.originalShowWhyModal(ksiId); 
         } else {
-            // Authenticated - call the globally available showWhyModal function from the main HTML
-            if (typeof showWhyModal === 'function') {
-                showWhyModal(ksiId);
-            } else {
-                console.error('showWhyModal function not found in global scope');
-                alert('Unable to load technical details. Please refresh the page.');
-            }
+            console.error('originalShowWhyModal function not found. Could not display details.');
+            // As a fallback call a simplified modal
+            showFallbackWhyModal(ksiId);
         }
     }
+}
 
 
 
