--- a/index.html
+++ b/index.html
@@ -9047,7 +9047,7 @@ async function loadQuarterlyReportData() {
 <script>
 /**
  * Trust Center All-in-One Visual Enhancement Script
- * Version: 3.1.0 (Fixes race condition by delaying initialization)
+ * Version: 3.2.0 (Fixes style overrides with !important)
  *
  * This single script provides a complete visual overhaul, including
  * fonts, styles, and interactive effects with zero HTML modifications.
@@ -9055,7 +9055,7 @@ async function loadQuarterlyReportData() {
 (function() {
     'use strict';
     
-    console.log('🎨 Loading All-in-One Visual Enhancements...');
+    console.log('🎨 Loading All-in-One Visual Enhancements (v3.2)...');
 
     function init() {
         injectFonts();
@@ -9075,7 +9075,6 @@ async function loadQuarterlyReportData() {
         const styleElement = document.createElement('style');
         styleElement.id = 'trust-center-adapted-enhancements';
         styleElement.textContent = `
-            /* --- Core Variables --- */
             :root {
                 --enh-gradient-1: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
                 --enh-gradient-2: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);
@@ -9094,189 +9093,115 @@ async function loadQuarterlyReportData() {
                 --enh-shadow-glow: 0 8px 32px rgba(99, 102, 241, 0.25);
             }
 
-            /* --- Body Font & Background Effect --- */
-            body {
-                font-family: 'Inter', sans-serif;
-            }
+            body { font-family: 'Inter', sans-serif; }
             body::before {
-                content: '';
-                position: fixed;
-                top: -50%; left: -50%;
+                content: ''; position: fixed; top: -50%; left: -50%;
                 width: 200%; height: 200%;
                 background: radial-gradient(circle at 20% 30%, rgba(99, 102, 241, 0.07) 0%, transparent 40%),
                             radial-gradient(circle at 80% 70%, rgba(139, 92, 246, 0.07) 0%, transparent 40%);
-                z-index: -1;
-                animation: floatBackground 25s ease-in-out infinite;
+                z-index: -1; animation: floatBackground 25s ease-in-out infinite;
             }
+            @keyframes floatBackground { 0%, 100% { transform: translate(0, 0); } 50% { transform: translate(20px, -20px); } }
 
-            @keyframes floatBackground {
-                0%, 100% { transform: translate(0, 0); }
-                50% { transform: translate(20px, -20px); }
-            }
-
-            /* --- Header --- */
             .header {
                 background: var(--enh-glass-bg) !important;
-                backdrop-filter: blur(var(--enh-blur));
-                -webkit-backdrop-filter: blur(var(--enh-blur));
+                backdrop-filter: blur(var(--enh-blur)) !important;
+                -webkit-backdrop-filter: blur(var(--enh-blur)) !important;
                 border-bottom: 1px solid var(--enh-glass-border) !important;
-                box-shadow: var(--enh-shadow-1);
-                transition: var(--enh-transition);
             }
 
-            /* --- Title Text --- */
             .title-section h1 {
-                font-family: 'Inter', sans-serif;
-                font-weight: 800;
-                background: var(--enh-gradient-1);
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
-                background-clip: text;
-                animation: titleShine 4s ease-in-out infinite alternate;
+                font-family: 'Inter', sans-serif !important; font-weight: 800 !important;
+                background: var(--enh-gradient-1) !important;
+                -webkit-background-clip: text !important; -webkit-text-fill-color: transparent !important;
+                background-clip: text !important; animation: titleShine 4s ease-in-out infinite alternate;
             }
-            @keyframes titleShine {
-                from { filter: brightness(1); }
-                to { filter: brightness(1.3); }
-            }
+            @keyframes titleShine { from { filter: brightness(1); } to { filter: brightness(1.3); } }
 
-            /* --- Tab Navigation --- */
-            .tab-btn {
-                transition: var(--enh-transition) !important;
-            }
-            .tab-btn:not(.active):hover {
-                background: var(--enh-glass-bg) !important;
-                transform: translateY(-2px);
-            }
-            .tab-btn.active {
-                box-shadow: var(--enh-shadow-glow) !important;
-            }
+            .tab-btn:not(.active):hover { background: var(--enh-glass-bg) !important; transform: translateY(-2px); }
+            .tab-btn.active { box-shadow: var(--enh-shadow-glow) !important; }
 
-            /* --- All Major Cards & Sections --- */
             .trust-section, .ksi-section, .stat-card, .trust-card, .update-card, .ksi-card, .access-card {
                 background: var(--enh-glass-bg) !important;
-                backdrop-filter: blur(var(--enh-blur));
-                -webkit-backdrop-filter: blur(var(--enh-blur));
+                backdrop-filter: blur(var(--enh-blur)) !important;
+                -webkit-backdrop-filter: blur(var(--enh-blur)) !important;
                 border: 1px solid var(--enh-glass-border) !important;
                 box-shadow: var(--enh-shadow-1) !important;
                 transition: var(--enh-transition) !important;
-                position: relative;
-                overflow: hidden;
+                position: relative !important; overflow: hidden !important;
             }
 
             .trust-section:hover, .ksi-section:hover, .stat-card:hover, .trust-card:hover, .update-card:hover, .ksi-card:hover, .access-card:hover {
-                transform: translateY(-6px);
+                transform: translateY(-6px) !important;
                 box-shadow: var(--enh-shadow-2), var(--enh-shadow-glow) !important;
                 border-color: rgba(99, 102, 241, 0.4) !important;
             }
 
-            /* --- Animated Top Border for Cards --- */
             .trust-section::before, .ksi-section::before, .stat-card::before, .trust-card::before {
-                content: '';
-                position: absolute;
-                top: 0; left: 0;
-                width: 100%; height: 3px;
-                background: var(--enh-gradient-1);
-                transform: scaleX(0);
-                transform-origin: left;
+                content: ''; position: absolute; top: 0; left: 0;
+                width: 100%; height: 3px; background: var(--enh-gradient-1);
+                transform: scaleX(0); transform-origin: left;
                 transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1);
             }
+            .trust-section:hover::before, .ksi-section:hover::before, .stat-card:hover::before, .trust-card:hover::before { transform: scaleX(1); }
+            .stat-card.enhancement:hover::before { background: var(--enh-gradient-2) !important; }
 
-            .trust-section:hover::before, .ksi-section:hover::before, .stat-card:hover::before, .trust-card:hover::before {
-                transform: scaleX(1);
-            }
-            .stat-card.enhancement:hover::before {
-                background: var(--enh-gradient-2) !important;
-            }
-
-
-            /* --- Buttons --- */
             .action-btn, .access-btn, .schedule-btn, .method-button, .form-submit-btn, .tier-btn.active {
-                background: var(--enh-gradient-1) !important;
-                border: none !important;
-                box-shadow: var(--enh-shadow-1);
-                transition: var(--enh-transition) !important;
-                position: relative;
-                overflow: hidden;
-                z-index: 1;
+                background: var(--enh-gradient-1) !important; border: none !important;
+                box-shadow: var(--enh-shadow-1) !important; transition: var(--enh-transition) !important;
+                position: relative !important; overflow: hidden !important; z-index: 1 !important;
             }
 
             .action-btn:hover, .access-btn:hover, .schedule-btn:hover, .method-button:hover, .form-submit-btn:hover {
-                transform: translateY(-3px);
+                transform: translateY(-3px) !important;
                 box-shadow: var(--enh-shadow-2), var(--enh-shadow-glow) !important;
             }
 
-            /* --- Ripple Effect for Buttons --- */
             .action-btn::after, .access-btn::after, .schedule-btn::after, .method-button::after, .form-submit-btn::after {
-                content: '';
-                position: absolute;
-                top: 50%; left: 50%;
-                width: 5px; height: 5px;
-                background: rgba(255, 255, 255, 0.4);
-                opacity: 0;
-                border-radius: 50%;
-                transform: scale(1, 1) translate(-50%, -50%);
-                transform-origin: 50% 50%;
+                content: ''; position: absolute; top: 50%; left: 50%;
+                width: 5px; height: 5px; background: rgba(255, 255, 255, 0.4);
+                opacity: 0; border-radius: 50%;
+                transform: scale(1, 1) translate(-50%, -50%); transform-origin: 50% 50%;
             }
-
-            .action-btn:focus:not(:active)::after, .access-btn:focus:not(:active)::after {
-                animation: ripple 1s ease-out;
-            }
-
+            .action-btn:focus:not(:active)::after, .access-btn:focus:not(:active)::after { animation: ripple 1s ease-out; }
             @keyframes ripple {
                 0% { transform: scale(0, 0) translate(-50%, -50%); opacity: 1; }
                 20% { transform: scale(25, 25) translate(-50%, -50%); opacity: 1; }
                 100% { opacity: 0; transform: scale(40, 40) translate(-50%, -50%); }
             }
 
-            /* --- Modals --- */
             .cli-modal-content, .why-modal-content, .markdown-modal-content, .commands-modal-content, .poam-modal-content, .enhancement-modal-content, .custom-modal-content {
                 background: var(--enh-glass-bg) !important;
-                backdrop-filter: blur(20px);
-                -webkit-backdrop-filter: blur(20px);
+                backdrop-filter: blur(20px) !important; -webkit-backdrop-filter: blur(20px) !important;
                 border: 1px solid var(--enh-glass-border) !important;
-                box-shadow: var(--enh-shadow-2), 0 0 80px rgba(99, 102, 241, 0.2);
+                box-shadow: var(--enh-shadow-2), 0 0 80px rgba(99, 102, 241, 0.2) !important;
                 animation: modalFadeIn 0.5s cubic-bezier(0.4, 0, 0.2, 1);
             }
-
             .cli-modal-header, .why-modal-header, .markdown-modal-header, .commands-modal-header, .poam-modal-header, .enhancement-modal-header, .custom-modal-header {
                 background: var(--enh-gradient-1) !important;
             }
+            @keyframes modalFadeIn { from { opacity: 0; transform: scale(0.95); } to { opacity: 1; transform: scale(1); } }
 
-            @keyframes modalFadeIn {
-                from { opacity: 0; transform: scale(0.95); }
-                to { opacity: 1; transform: scale(1); }
-            }
-
-            /* --- Form Inputs in Modals & Sections --- */
             #agency-form-section input, #agency-form-section select, #agency-form-section textarea,
-            .modal-body input, .modal-body select, .modal-body textarea,
-            .search-box {
+            .modal-body input, .modal-body select, .modal-body textarea, .search-box {
                 background: var(--enh-glass-bg) !important;
                 border: 2px solid var(--enh-glass-border) !important;
-                transition: var(--enh-transition);
             }
-
             #agency-form-section input:focus, #agency-form-section select:focus, #agency-form-section textarea:focus,
-            .modal-body input:focus, .modal-body select:focus, .modal-body textarea:focus,
-            .search-box:focus {
+            .modal-body input:focus, .modal-body select:focus, .modal-body textarea:focus, .search-box:focus {
                 border-color: var(--primary-500) !important;
                 box-shadow: 0 0 0 4px rgba(99, 102, 241, 0.2) !important;
             }
 
-            /* --- Code & Monospaced Fonts --- */
-            .ksi-id, .command-code, pre, code {
-                font-family: 'JetBrains Mono', monospace;
-            }
+            .ksi-id, .command-code, pre, code { font-family: 'JetBrains Mono', monospace !important; }
 
-            /* --- Scrollbar --- */
-            ::-webkit-scrollbar { width: 10px; }
-            ::-webkit-scrollbar-track { background: var(--bg-secondary); }
+            ::-webkit-scrollbar { width: 10px !important; }
+            ::-webkit-scrollbar-track { background: var(--bg-secondary) !important; }
             ::-webkit-scrollbar-thumb {
-                background: var(--enh-gradient-1);
-                border-radius: 10px;
-                border: 2px solid var(--bg-secondary);
+                background: var(--enh-gradient-1) !important;
+                border-radius: 10px !important; border: 2px solid var(--bg-secondary) !important;
             }
-            ::-webkit-scrollbar-thumb:hover { background: var(--enh-gradient-2); }
+            ::-webkit-scrollbar-thumb:hover { background: var(--enh-gradient-2) !important; }
         `;
         document.head.appendChild(styleElement);
     }
@@ -9292,15 +9217,13 @@ async function loadQuarterlyReportData() {
             });
         }, { threshold: 0.1 });
 
-        // This function might run before the KSI cards are in the DOM.
-        // We'll repeatedly try to find them for a few seconds.
         let attempts = 0;
         const findElementsInterval = setInterval(() => {
             const elementsToAnimate = document.querySelectorAll(
                 '.trust-section, .ksi-section, .stat-card, .trust-card, .ksi-card, .access-card, .update-card'
             );
             
-            if (elementsToAnimate.length > 0 || attempts > 20) { // Try for ~2 seconds
+            if (elementsToAnimate.length > 0 || attempts > 20) {
                 clearInterval(findElementsInterval);
                 elementsToAnimate.forEach(el => {
                     el.style.opacity = '0';
@@ -9310,17 +9233,12 @@ async function loadQuarterlyReportData() {
                 });
             }
             attempts++;
-        }, 100); // Check every 100ms
+        }, 100);
     }
 
-    // ========== THE FIX IS HERE ==========
-    // Instead of running immediately on DOMContentLoaded, we wait a brief moment.
-    // This gives the main application script time to finish fetching data and building elements.
     if (document.readyState === 'loading') {
-        // Wait for the window 'load' event, which fires after all resources (including other scripts) are done.
         window.addEventListener('load', () => setTimeout(init, 200));
     } else {
-        // If the page is already fully loaded, just wait a brief moment.
         setTimeout(init, 200);
     }
 
