--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="shortcut icon" href="meridian-favicon.png">
     <meta name="theme-color" content="#6366f1">
     <meta name="msapplication-TileColor" content="#6366f1">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">    
     
     <style>
         * {
@@ -121,7 +124,7 @@
 
 /* ✅ MERIDIAN PROFESSIONAL BODY STYLING */
 body {
-    font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+    font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
     background: var(--gradient-primary);
     min-height: 100vh;
     color: var(--text-primary);
