--- a/index.html
+++ b/index.html
@@ -9952,10 +9952,12 @@ async function loadQuarterlyReportData() {
     (function() {
         'use strict';
 
+        // Run all modernization tasks after the page content is loaded
         document.addEventListener('DOMContentLoaded', function() {
             addFontAwesome();
             replacePageIcons();
             setupAnimatedCounters();
+            setupScrollAnimations(); // <-- New animation for the Trust Center
         });
 
         /**
@@ -9977,6 +9979,7 @@ async function loadQuarterlyReportData() {
          * 2. Scans the document and replaces emojis with professional icons.
          */
         function replacePageIcons() {
+            // *** ICON MAP IS NOW EXPANDED for the Trust Center tab ***
             const iconMap = {
                 '🛡️': '<i class="fa-solid fa-shield-halved fa-fw"></i>', '⏰': '<i class="fa-solid fa-clock fa-fw"></i>',
                 '🚀': '<i class="fa-solid fa-rocket fa-fw"></i>', '🔄': '<i class="fa-solid fa-arrows-rotate fa-fw"></i>',
@@ -9994,6 +9997,7 @@ async function loadQuarterlyReportData() {
                 '💬': '<i class="fa-solid fa-comments fa-fw"></i>', '🎪': '<i class="fa-solid fa-users fa-fw"></i>',
                 '📄': '<i class="fa-solid fa-file-lines fa-fw"></i>', '🏛️': '<i class="fa-solid fa-landmark fa-fw"></i>',
                 '📦': '<i class="fa-solid fa-box-archive fa-fw"></i>', '📥': '<i class="fa-solid fa-download fa-fw"></i>',
+                '🔮': '<i class="fa-solid fa-wand-magic-sparkles fa-fw"></i>', '⚠️': '<i class="fa-solid fa-triangle-exclamation fa-fw" style="color: var(--warning-500);"></i>'
             };
 
             let bodyHtml = document.body.innerHTML;
@@ -10009,51 +10013,33 @@ async function loadQuarterlyReportData() {
          */
         function setupAnimatedCounters() {
             const originalUpdateMetrics = window.updateMetrics;
-
-            if (typeof originalUpdateMetrics !== 'function') {
-                console.error("Original updateMetrics function not found. Counters won't be animated.");
-                return;
-            }
-
+            if (typeof originalUpdateMetrics !== 'function') { return; }
             const animateValue = (obj, start, end, duration) => {
                 let startTimestamp = null;
                 const step = (timestamp) => {
                     if (!startTimestamp) startTimestamp = timestamp;
                     const progress = Math.min((timestamp - startTimestamp) / duration, 1);
                     const currentValue = progress * (end - start) + start;
-                    if (obj.id === 'overall-score') {
-                        obj.innerHTML = currentValue.toFixed(1) + '%';
-                    } else {
-                        obj.innerHTML = Math.floor(currentValue);
-                    }
-                    if (progress < 1) {
-                        window.requestAnimationFrame(step);
-                    }
+                    if (obj.id === 'overall-score') { obj.innerHTML = currentValue.toFixed(1) + '%'; } 
+                    else { obj.innerHTML = Math.floor(currentValue); }
+                    if (progress < 1) { window.requestAnimationFrame(step); }
                 };
                 window.requestAnimationFrame(step);
             };
-            
             window.updateMetrics = function() {
                 const tempStore = {};
                 const ids = ['overall-score', 'passed-count', 'failed-count', 'warning-count', 'info-count'];
                 const elements = ids.map(id => document.getElementById(id));
-
                 elements.forEach(el => {
                     if (el) {
                         Object.defineProperty(el, 'textContent', {
                             get: function() { return this.innerHTML; },
-                            set: function(value) {
-                                // *** THIS IS THE FIX ***
-                                // Convert value to a string before using .replace()
-                                tempStore[this.id] = String(value).replace('%', '');
-                            },
+                            set: function(value) { tempStore[this.id] = String(value).replace('%', ''); },
                             configurable: true
                         });
                     }
                 });
-                
                 originalUpdateMetrics.apply(this, arguments);
-
                 elements.forEach(el => {
                     if (el) {
                         delete el.textContent;
@@ -10061,8 +10047,49 @@ async function loadQuarterlyReportData() {
                         animateValue(el, 0, endValue, 1500);
                     }
                 });
-                 console.log('Counters animated.');
+                console.log('Counters animated.');
             };
+        }
+
+        /**
+         * 4. *** NEW FEATURE *** Sets up fade-in animations for elements as they are scrolled into view.
+         */
+        function setupScrollAnimations() {
+            const elementsToAnimate = document.querySelectorAll('.access-card, .trust-section');
+            if (!elementsToAnimate.length) return;
+
+            // Add the necessary CSS for the animation
+            const style = document.createElement('style');
+            style.innerHTML = `
+                .fade-in-on-scroll {
+                    opacity: 0;
+                    transform: translateY(20px);
+                    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+                }
+                .fade-in-on-scroll.is-visible {
+                    opacity: 1;
+                    transform: translateY(0);
+                }
+            `;
+            document.head.appendChild(style);
+
+            // Set up the observer
+            const observer = new IntersectionObserver((entries) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        entry.target.classList.add('is-visible');
+                        observer.unobserve(entry.target); // Animate only once
+                    }
+                });
+            }, { threshold: 0.1 });
+
+            // Observe each element
+            elementsToAnimate.forEach((el, index) => {
+                el.classList.add('fade-in-on-scroll');
+                el.style.transitionDelay = `${index * 50}ms`; // Stagger the animation
+                observer.observe(el);
+            });
+            console.log('Scroll animations enabled for Trust Center.');
         }
 
     })();
