--- a/index.html
+++ b/index.html
@@ -9952,12 +9952,11 @@ async function loadQuarterlyReportData() {
     (function() {
         'use strict';
 
-        // Run all modernization tasks after the page content is loaded
         document.addEventListener('DOMContentLoaded', function() {
             addFontAwesome();
             replacePageIcons();
             setupAnimatedCounters();
-            setupScrollAnimations(); // <-- New animation for the Trust Center
+            setupScrollAnimations();
         });
 
         /**
@@ -9979,7 +9978,7 @@ async function loadQuarterlyReportData() {
          * 2. Scans the document and replaces emojis with professional icons.
          */
         function replacePageIcons() {
-            // *** ICON MAP IS NOW EXPANDED for the Trust Center tab ***
+            // *** FINAL & COMPLETE ICON MAP ***
             const iconMap = {
                 '🛡️': '<i class="fa-solid fa-shield-halved fa-fw"></i>', '⏰': '<i class="fa-solid fa-clock fa-fw"></i>',
                 '🚀': '<i class="fa-solid fa-rocket fa-fw"></i>', '🔄': '<i class="fa-solid fa-arrows-rotate fa-fw"></i>',
@@ -9997,7 +9996,9 @@ async function loadQuarterlyReportData() {
                 '💬': '<i class="fa-solid fa-comments fa-fw"></i>', '🎪': '<i class="fa-solid fa-users fa-fw"></i>',
                 '📄': '<i class="fa-solid fa-file-lines fa-fw"></i>', '🏛️': '<i class="fa-solid fa-landmark fa-fw"></i>',
                 '📦': '<i class="fa-solid fa-box-archive fa-fw"></i>', '📥': '<i class="fa-solid fa-download fa-fw"></i>',
-                '🔮': '<i class="fa-solid fa-wand-magic-sparkles fa-fw"></i>', '⚠️': '<i class="fa-solid fa-triangle-exclamation fa-fw" style="color: var(--warning-500);"></i>'
+                '🔮': '<i class="fa-solid fa-wand-magic-sparkles fa-fw"></i>', '⚠️': '<i class="fa-solid fa-triangle-exclamation fa-fw" style="color: var(--warning-500);"></i>',
+                '📌': '<i class="fa-solid fa-thumbtack fa-fw"></i>', '🏗️': '<i class="fa-solid fa-building-flag fa-fw"></i>',
+                '🛍️': '<i class="fa-solid fa-bag-shopping fa-fw"></i>', '📞': '<i class="fa-solid fa-phone fa-fw"></i>'
             };
 
             let bodyHtml = document.body.innerHTML;
@@ -10052,13 +10053,12 @@ async function loadQuarterlyReportData() {
         }
 
         /**
-         * 4. *** NEW FEATURE *** Sets up fade-in animations for elements as they are scrolled into view.
+         * 4. Sets up fade-in animations for elements as they are scrolled into view.
          */
         function setupScrollAnimations() {
             const elementsToAnimate = document.querySelectorAll('.access-card, .trust-section');
             if (!elementsToAnimate.length) return;
 
-            // Add the necessary CSS for the animation
             const style = document.createElement('style');
             style.innerHTML = `
                 .fade-in-on-scroll {
@@ -10073,20 +10073,18 @@ async function loadQuarterlyReportData() {
             `;
             document.head.appendChild(style);
 
-            // Set up the observer
             const observer = new IntersectionObserver((entries) => {
                 entries.forEach(entry => {
                     if (entry.isIntersecting) {
                         entry.target.classList.add('is-visible');
-                        observer.unobserve(entry.target); // Animate only once
+                        observer.unobserve(entry.target);
                     }
                 });
             }, { threshold: 0.1 });
 
-            // Observe each element
             elementsToAnimate.forEach((el, index) => {
                 el.classList.add('fade-in-on-scroll');
-                el.style.transitionDelay = `${index * 50}ms`; // Stagger the animation
+                el.style.transitionDelay = `${index * 50}ms`;
                 observer.observe(el);
             });
             console.log('Scroll animations enabled for Trust Center.');
