--- a/index.html
+++ b/index.html
@@ -6509,24 +6509,32 @@ async function loadQuarterlyReportData() {
     document.head.appendChild(script);
             });
         }
+        
     displayConfigModal(htmlContent, isPublic) {
-        let modal = document.getElementById('config-viewer-modal');
+    let modal = document.getElementById('config-viewer-modal');
     if (!modal) {
         modal = document.createElement('div');
-    modal.id = 'config-viewer-modal';
-    modal.className = 'modal';
-    document.body.appendChild(modal);
-            }
+        modal.id = 'config-viewer-modal';
+        modal.className = 'modal';
+        document.body.appendChild(modal);
+    }
     const title = isPublic ?
-    '📄 FedRAMP 20x Secure Configuration Standards' :
-    '📄 Tenant-Specific Secure Configuration';
+        '📄 FedRAMP 20x Secure Configuration Standards' :
+        '📄 Tenant-Specific Secure Configuration';
+
+    // Temporarily store the content so the new window function can access it
+    window.tempConfigContent = { html: htmlContent, title: title };
+
     modal.innerHTML = `
-    <div class="modal-content config-modal-content">
+    <div class="modal-content config-modal-content" style="max-width: 90vw; max-height: 90vh;">
         <div class="modal-header">
             <h3>${title}</h3>
             <div style="display: flex; gap: 0.5rem; align-items: center;">
                 <button onclick="window.configManager.downloadConfig(${isPublic})" class="btn-secondary" style="padding: 0.5rem 1rem; font-size: 0.875rem;">
                     ⬇️ Download
+                </button>
+                <button onclick="openConfigInNewWindow()" class="btn-secondary" style="padding: 0.5rem 1rem; font-size: 0.875rem;">
+                    ↗️ Open in New Window
                 </button>
                 <button class="close-btn" onclick="closeCustomModal('config-viewer-modal')">&times;</button>
             </div>
@@ -6538,8 +6546,43 @@ async function loadQuarterlyReportData() {
     `;
     modal.classList.add('active');
     document.body.style.overflow = 'hidden';
-        }
+}
+
+/**
+ * New helper function right after the displayConfigModal function.
+ */
+function openConfigInNewWindow() {
+    if (window.tempConfigContent) {
+        const { html, title } = window.tempConfigContent;
+        const newWindow = window.open("", "_blank");
+
+        // Write the full HTML document, including styles, to the new tab
+        newWindow.document.write(`
+            <html>
+                <head>
+                    <title>${title}</title>
+                    <style>
+                        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif; line-height: 1.6; color: #333; padding: 2rem; margin: 0; }
+                        .markdown-content { max-width: 800px; margin: auto; }
+                        h1, h2, h3 { border-bottom: 1px solid #eaecef; padding-bottom: 0.3em; }
+                        code { background-color: #f6f8fa; padding: 0.2em 0.4em; margin: 0; font-size: 85%; border-radius: 6px; }
+                        pre { background-color: #f6f8fa; padding: 16px; overflow: auto; line-height: 1.45; border-radius: 6px; }
+                        table { border-collapse: collapse; margin-top: 1rem; margin-bottom: 1rem; }
+                        th, td { border: 1px solid #dfe2e5; padding: 8px 15px; }
+                        th { font-weight: 600; }
+                        a { color: #0366d6; text-decoration: none; }
+                        a:hover { text-decoration: underline; }
+                    </style>
+                </head>
+                <body>
+                    <div class="markdown-content">${html}</div>
+                </body>
+            </html>
+        `);
+        newWindow.document.close();
+        closeCustomModal('config-viewer-modal'); // Close the modal after opening the new tab
     }
+}
 
     // Public config access (no authentication required)
     async function viewPublicSecureConfiguration() {
